Agrego boton para comprar

--- a/pages/detalles-de-producto/busos/buso-2.html
+++ b/pages/detalles-de-producto/busos/buso-2.html
@@ -65,7 +65,7 @@
                 <li>
                     <h4>Color: Gris / Celeste / Negro / Beige</h4>
                 </li>
-                <p class="Precio-Antiguo text-decoration-line-through fs-5">$60.000</p>
+                <p style="margin: 0px;" class="text-decoration-line-through fs-5">$60.000</p>
                 <h3 class="Precio fw-bold fs-2">$40.000</h3>
                 <div class="d-flex gap-2 mb-3">
                     <h4><strong>Talles:</strong></h4>
@@ -74,9 +74,12 @@
                     <div class="Talles border rounded text-center p-1" style="width: 40px;">3</div>
                     <div class="Talles border rounded text-center p-1" style="width: 40px;">4</div>
                 </div>
-                <button class="Carrito container-fluid p-2 rounded bg-success">
+                <button class="Botones container-fluid p-2 rounded bg-success my-2">
                     <h4>Comprar</h4>
-                </button>   
+                </button> 
+                <button class="Botones container-fluid p-2 rounded bg-primary">
+                    <h4>Agregar al Carrito</h4>
+                </button>  
             </div>
         </div>
     </main>
