Agrego formas de pago

--- a/pages/detalles-de-producto/busos/buso-2.html
+++ b/pages/detalles-de-producto/busos/buso-2.html
@@ -76,10 +76,10 @@
                 </div>
                 <button class="Botones container-fluid p-2 rounded bg-success my-2">
                     <h4>Comprar</h4>
-                </button> 
+                </button>
                 <button class="Botones container-fluid p-2 rounded bg-primary">
                     <h4>Agregar al Carrito</h4>
-                </button>  
+                </button>
                 <div class="my-2">
                     <details class="Interior p-3 rounded mb-2">
                         <summary class="fs-5">DESCRIPCIÓN</summary>
@@ -90,6 +90,11 @@
                         <p>Talle 2: ancho 74 cm, largo 66 cm</p>
                         <p>Talle 3: ancho 76 cm, largo 68 cm</p>
                         <P>Talle 4: ancho 78 cm, largo 70 cm</P>
+                    </details>
+                    <details class="Interior p-3 rounded">
+                        <summary class="fs-5">MEDIOS DE PAGO</summary>
+                        <p>3 cuotas sin interés de $13.300</p>
+                        <p>20% de descuento pagando con Efectivo o Transferencia</p>
                     </details>
                 </div>
             </div>
