--- a/pages/detalles-de-producto/busos/buso-3.html
+++ b/pages/detalles-de-producto/busos/buso-3.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <meta name="description" content="En GLAM encontraras la mejor ropa deportiva: remeras, shorts, camperas, calzado. Moda, confort y rendimiento en un solo lugar">
+    <meta name="description"
+        content="En GLAM encontraras la mejor ropa deportiva: remeras, shorts, camperas, calzado. Moda, confort y rendimiento en un solo lugar">
     <meta name="keywords" content="Zapatillas, Busos, Camisetas, Short, Camperas, Moda, Confort, Elegancia">
     <meta name="author" content="Gonzalo Tabares, Leandro Blanca, Abel Ruiz, Mauro Seu">
 </head>
@@ -19,7 +20,7 @@
 
     <main>
         <div class="row">
-                        <div id="carouselExampleIndicators" class="carousel slide col-12 col-md-6 col-lg-6">
+            <div id="carouselExampleIndicators" class="carousel slide col-12 col-md-6 col-lg-6">
                 <div class="carousel-indicators col-8">
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
                         class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -30,7 +31,8 @@
                 </div>
                 <div class="carousel-inner col-6">
                     <div class="carousel-item active">
-                        <img src="/assets/img/busos/Buso-Los-Angeles-1.png" alt="Buso Los Angeles Blanco" class="col-12">
+                        <img src="/assets/img/busos/Buso-Los-Angeles-1.png" alt="Buso Los Angeles Blanco"
+                            class="col-12">
                     </div>
                     <div class="carousel-item">
                         <img src="/assets/img/busos/Buso-Los-Angeles-2.png" alt="Buso Los Angeles Negro" class="col-12">
@@ -50,8 +52,12 @@
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
+            <div class="col-12 col-md-6 col-lg-6 px-5">
+                <h2 class="mt-5 text-center">Buzo Los Angeles</h2>
+                <hr>
+            </div>
         </div>
-    </main> 
+    </main>
 
 </body>
 
