--- a/pages/detalles-de-producto/busos/buso-3.html
+++ b/pages/detalles-de-producto/busos/buso-3.html
@@ -55,6 +55,13 @@
             <div class="col-12 col-md-6 col-lg-6 px-5">
                 <h2 class="mt-5 text-center">Buzo Los Angeles</h2>
                 <hr>
+                <li>
+                    <h4>Buzo 100% algodon</h4>
+                </li>
+                <li>
+                    <h4>Color: Blanco / Negro / Gris</h4>
+                </li>
+                
             </div>
         </div>
     </main>
