--- a/pages/detalles-de-producto/busos/buso-3.html
+++ b/pages/detalles-de-producto/busos/buso-3.html
@@ -61,7 +61,8 @@
                 <li>
                     <h4>Color: Blanco / Negro / Gris</h4>
                 </li>
-                
+                <p style="margin: 0px;" class="text-decoration-line-through fs-5">$60.000</p>
+                <h3 class="Precio fw-bold fs-2">$45.000</h3>
             </div>
         </div>
     </main>
