--- a/pages/detalles-de-producto/busos/buso-4.html
+++ b/pages/detalles-de-producto/busos/buso-4.html
@@ -49,6 +49,12 @@
             <div class="col-12 col-md-6 col-lg-6 px-5">
                 <h2 class="mt-5 text-center">Buzo Estampado</h2>
                 <hr>
+                <li>
+                    <h4>Buzo 100% algodon</h4>
+                </li>
+                <li>
+                    <h4>Color: Verde / Negro</h4>
+                </li>
             </div>
         </div>
     </main>
