--- a/pages/detalles-de-producto/busos/buso-4.html
+++ b/pages/detalles-de-producto/busos/buso-4.html
@@ -55,6 +55,8 @@
                 <li>
                     <h4>Color: Verde / Negro</h4>
                 </li>
+                <p style="margin: 0px;" class="text-decoration-line-through fs-5">$80.000</p>
+                <h3 class="Precio fw-bold fs-2">$60.000</h3>
             </div>
         </div>
     </main>
