--- a/pages/detalles-de-producto/busos/buso-4.html
+++ b/pages/detalles-de-producto/busos/buso-4.html
@@ -69,6 +69,17 @@
                 <button class="Botones container-fluid p-2 rounded bg-primary">
                     <h4>Agregar al Carrito</h4>
                 </button>
+                <div class="my-2">
+                    <details class="Interior p-3 rounded mb-2">
+                        <summary class="fs-5">DESCRIPCIÓN</summary>
+                        <p>Buzo con bolsillos laterales, estampa de frente y mangas, realizada mediante serigrafia</p>
+                        <p><strong class="me-1">Material:</strong>Algodon Premium</p>
+                        <p><strong class="me-1">Color:</strong>Verde / Negro</p>
+                        <p>Talle 1: ancho 72 cm, largo 64 cm</p>
+                        <p>Talle 2: ancho 74 cm, largo 66 cm</p>
+                        <p>Talle 3: ancho 76 cm, largo 68 cm</p>
+                    </details>
+                </div>
             </div>
         </div>
     </main>
