Agrego formas de pago

--- a/pages/detalles-de-producto/busos/buso-4.html
+++ b/pages/detalles-de-producto/busos/buso-4.html
@@ -79,6 +79,11 @@
                         <p>Talle 2: ancho 74 cm, largo 66 cm</p>
                         <p>Talle 3: ancho 76 cm, largo 68 cm</p>
                     </details>
+                    <details class="Interior p-3 rounded">
+                        <summary class="fs-5">MEDIOS DE PAGO</summary>
+                        <p>3 cuotas sin interés de 20.000</p>
+                        <p>20% de descuento pagando con Efectivo o Transferencia</p>
+                    </details>
                 </div>
             </div>
         </div>
