Agrego colores disponibles

--- a/pages/detalles-de-producto/calzados/calzado-1.html
+++ b/pages/detalles-de-producto/calzados/calzado-1.html
@@ -56,8 +56,11 @@
                 </button>
             </div>
             <div class="col-12 col-md-6 col-lg-6 px-5">
-                <h2 class="mt-5 text-center">Adidas Forum</h2>
+                <h2 class="mt-5 text-center">Adidas Forum Low</h2>
                 <hr>
+                <li>
+                    <h4>Color: Azul / Marron / Blanca</h4>
+                </li>
             </div>
         </div>
     </main>
