Agrego precio antes y ahora

--- a/pages/detalles-de-producto/calzados/calzado-1.html
+++ b/pages/detalles-de-producto/calzados/calzado-1.html
@@ -61,6 +61,9 @@
                 <li>
                     <h4>Color: Azul / Marron / Blanca</h4>
                 </li>
+                <p style="margin: 0px;" class="text-decoration-line-through fs-5">$90.000</p>
+                <h3 class="Precio fw-bold fs-2">$70.000</h3>
+                
             </div>
         </div>
     </main>
