Agrego talles de las zapatillas

--- a/pages/detalles-de-producto/calzados/calzado-1.html
+++ b/pages/detalles-de-producto/calzados/calzado-1.html
@@ -63,7 +63,13 @@
                 </li>
                 <p style="margin: 0px;" class="text-decoration-line-through fs-5">$90.000</p>
                 <h3 class="Precio fw-bold fs-2">$70.000</h3>
-                
+                <div class="d-flex gap-2 mb-3">
+                    <h4><strong>Talles:</strong></h4>
+                    <div class="Talles border rounded text-center p-1" style="width: 40px;">41</div>
+                    <div class="Talles border rounded text-center p-1" style="width: 40px;">42</div>
+                    <div class="Talles border rounded text-center p-1" style="width: 40px;">43</div>
+                    <div class="Talles border rounded text-center p-1" style="width: 40px;">44</div>
+                </div>
             </div>
         </div>
     </main>
