Agrego talles del producto

--- a/pages/detalles-de-producto/calzados/calzado-1.html
+++ b/pages/detalles-de-producto/calzados/calzado-1.html
@@ -76,6 +76,16 @@
                 <button class="Botones container-fluid p-2 rounded bg-primary">
                     <h4>Agregar al Carrito</h4>
                 </button>
+                    <details class="Interior p-3 rounded mb-2">
+                        <summary class="fs-5">DESCRIPCIÓN</summary>
+                        <p></p>
+                        <p><strong class="me-1">Material:</strong>Tela</p>
+                        <p><strong class="me-1">Color:</strong>Azul / Marron / Blanca</p>
+                        <p>Talle (ARG): 41 / Talle (US): 9.5 / 10</p>
+                        <p>Talle (ARG): 42 / Talle (US): 10 / 10.5</p>
+                        <p>Talle (ARG): 43 / Talle (US): 11</p>
+                        <p>Talle (ARG): 44 / Talle (US): 12</p>
+                    </details>
             </div>
         </div>
     </main>
