--- a/pages/detalles-de-producto/calzados/calzado-2.html
+++ b/pages/detalles-de-producto/calzados/calzado-2.html
@@ -54,6 +54,9 @@
             <div class="col-12 col-md-6 col-lg-6 px-5">
                 <h2 class="mt-5 text-center">New Balance 530</h2>
                 <hr>
+                <li>
+                    <h4>Color: Gris / Negro / Blanco</h4>
+                </li>
             </div>
         </div>
     </main>
