--- a/pages/detalles-de-producto/calzados/calzado-2.html
+++ b/pages/detalles-de-producto/calzados/calzado-2.html
@@ -57,6 +57,8 @@
                 <li>
                     <h4>Color: Gris / Negro / Blanco</h4>
                 </li>
+                <p style="margin: 0px;" class="text-decoration-line-through fs-5">$65.000</p>
+                <h3 class="Precio fw-bold fs-2">$50.000</h3>
             </div>
         </div>
     </main>
