--- a/pages/detalles-de-producto/calzados/calzado-2.html
+++ b/pages/detalles-de-producto/calzados/calzado-2.html
@@ -59,6 +59,13 @@
                 </li>
                 <p style="margin: 0px;" class="text-decoration-line-through fs-5">$65.000</p>
                 <h3 class="Precio fw-bold fs-2">$50.000</h3>
+                <div class="d-flex gap-2 mb-3">
+                    <h4><strong>Talles:</strong></h4>
+                    <div class="Talles border rounded text-center p-1" style="width: 40px;">38</div>
+                    <div class="Talles border rounded text-center p-1" style="width: 40px;">39</div>
+                    <div class="Talles border rounded text-center p-1" style="width: 40px;">40</div>
+                    <div class="Talles border rounded text-center p-1" style="width: 40px;">41</div>
+                </div>
             </div>
         </div>
     </main>
