Agrego talles y descripcion

--- a/pages/detalles-de-producto/calzados/calzado-2.html
+++ b/pages/detalles-de-producto/calzados/calzado-2.html
@@ -31,13 +31,16 @@
                 </div>
                 <div class="carousel-inner col-6">
                     <div class="carousel-item active">
-                        <img src="/assets/img/zapatillas/Zapatillas-New-Balance-1.png" alt="New Balance Gris" class="col-12">
+                        <img src="/assets/img/zapatillas/Zapatillas-New-Balance-1.png" alt="New Balance Gris"
+                            class="col-12">
                     </div>
                     <div class="carousel-item">
-                        <img src="/assets/img/zapatillas/Zapatillas-New-Balance-2.png" alt="New Balance Negras" class="col-12">
+                        <img src="/assets/img/zapatillas/Zapatillas-New-Balance-2.png" alt="New Balance Negras"
+                            class="col-12">
                     </div>
                     <div class="carousel-item">
-                        <img src="/assets/img/zapatillas/Zapatillas-New-Balance-3.png" alt="New Balance Blancas" class="col-12">
+                        <img src="/assets/img/zapatillas/Zapatillas-New-Balance-3.png" alt="New Balance Blancas"
+                            class="col-12">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -72,6 +75,18 @@
                 <button class="Botones container-fluid p-2 rounded bg-primary">
                     <h4>Agregar al Carrito</h4>
                 </button>
+                <div class="my-2">
+                    <details class="Interior p-3 rounded mb-2">
+                        <summary class="fs-5">DESCRIPCIÓN</summary>
+                        <p></p>
+                        <p><strong class="me-1">Material:</strong>Tela</p>
+                        <p><strong class="me-1">Color:</strong> Gris / Negra / Blanca</p>
+                        <p>Talle (ARG): 38 / Talle (US): 7.5</p>
+                        <p>Talle (ARG): 39 / Talle (US): 8 / 8.5</p>
+                        <p>Talle (ARG): 40 / Talle (US): 9</p>
+                        <p>Talle (ARG): 41 / Talle (US): 9.5 / 10</p>
+                    </details>
+                </div>
             </div>
         </div>
     </main>
