Se agrego mas cards al carrusel

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div id="carouselExample" class="carousel slide">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <h2 class="d-flex justify-content-center">Nuestros Iconos Obsolutos</h2>
+                        <h2 class="d-flex justify-content-center">Siluetas historicas.</h2>
                         <div class="cards-wrapper">
                             <div class="card1">
                                 <img src="/assets/img/zapatillas/Zapatillas-Nike-1.png" class="card-img-top"
@@ -54,7 +54,7 @@
                     </div>
 
                     <div class="carousel-item">
-                        <h2 class="d-flex justify-content-center">Marcando Tendencias</h2>
+                        <h2 class="d-flex justify-content-center">Marcando tendencias.</h2>
                         <div class="cards-wrapper">
                             <div class="card1">
                                 <img src="/assets/img/zapatillas/Zapatillas-Adidas-1.png" class="card-img-top"
@@ -68,7 +68,7 @@
                                 <img src="/assets/img/zapatillas/Zapatillas-Adidas-2.png" class="card-img-top"
                                     alt="...">
                                 <div class="card-body">
-                                    <a href="#" class="btn btn-primary d-flex justify-content-center">Adidas Forum
+                                    <a href="#" class="btn btn-primary d-flex justify-content-center">Adidas Forum Low
                                         Coffee</a>
                                 </div>
                             </div>
@@ -83,19 +83,19 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <h2 class="d-flex justify-content-center">Estilo Unicos</h2>
+                        <h2 class="d-flex justify-content-center">Estilos unicos.</h2>
                         <div class="cards-wrapper">
                             <div class="card1">
                                 <img src="/assets/img/zapatillas/Zapatillas-Puma-1.png" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <a href="#" class="btn btn-primary d-flex justify-content-center">Puma Suede XL
+                                    <a href="#" class="btn btn-primary d-flex justify-content-center">Puma TimeUp
                                         Black</a>
                                 </div>
                             </div>
                             <div class="card1">
                                 <img src="/assets/img/zapatillas/Zapatillas-Puma-2.png" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <a href="#" class="btn btn-primary d-flex justify-content-center">Puma Suede Xl
+                                    <a href="#" class="btn btn-primary d-flex justify-content-center">Puma Suede XL
                                         Red</a>
                                 </div>
                             </div>
@@ -104,6 +104,36 @@
                                 <div class="card-body">
                                     <a href="#" class="btn btn-primary d-flex justify-content-center">Puma Suede XL
                                         "Grinch"</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="carousel-item">
+                        <h2 class="d-flex justify-content-center">Look urbano.</h2>
+                        <div class="cards-wrapper">
+                            <div class="card1">
+                                <img src="/assets/img/zapatillas/Zapatillas-New-Balance-1.png" class="card-img-top"
+                                    alt="New Balance 2002R">
+                                <div class="card-body">
+                                    <a href="#" class="btn btn-primary d-flex justify-content-center ">New Balance
+                                        2002R</a>
+                                </div>
+                            </div>
+                            <div class="card1">
+                                <img src="/assets/img/zapatillas/Zapatillas-New-Balance-2.png" class="card-img-top"
+                                    alt="New Balance R530">
+                                <div class="card-body">
+                                    <a href="#" class="btn btn-primary d-flex justify-content-center">New Balance
+                                        R530</a>
+                                </div>
+                            </div>
+                            <div class="card1">
+                                <img src="/assets/img/zapatillas/Zapatillas-New-Balance-3.png" class="card-img-top"
+                                    alt="New Balance 725H">
+                                <div class="card-body">
+                                    <a href="#" class="btn btn-primary d-flex justify-content-center">New Balance
+                                        725H</a>
                                 </div>
                             </div>
                         </div>
