Cambio la descripción y agrego medios de pago

--- a/pages/detalles-de-producto/calzados/calzado-2.html
+++ b/pages/detalles-de-producto/calzados/calzado-2.html
@@ -78,13 +78,20 @@
                 <div class="my-2">
                     <details class="Interior p-3 rounded mb-2">
                         <summary class="fs-5">DESCRIPCIÓN</summary>
-                        <p></p>
+                        <p>La zapatilla 530 es una versión retro de una de nuestras zapatillas clásicas para correr. La
+                            530 fusiona el estilo de cada día con una tecnología de amortiguación ABZORB bajo tus pies
+                            para una comodidad superior.</p>
                         <p><strong class="me-1">Material:</strong>Tela</p>
                         <p><strong class="me-1">Color:</strong> Gris / Negra / Blanca</p>
                         <p>Talle (ARG): 38 / Talle (US): 7.5</p>
                         <p>Talle (ARG): 39 / Talle (US): 8 / 8.5</p>
                         <p>Talle (ARG): 40 / Talle (US): 9</p>
                         <p>Talle (ARG): 41 / Talle (US): 9.5 / 10</p>
+                    </details>
+                    <details class="Interior p-3 rounded">
+                        <summary class="fs-5">MEDIOS DE PAGO</summary>
+                        <p>3 cuotas sin interés de $15.000</p>
+                        <p>20% de descuento pagando con Efectivo o Transferencia</p>
                     </details>
                 </div>
             </div>
