--- a/pages/detalles-de-producto/calzados/calzado-3.html
+++ b/pages/detalles-de-producto/calzados/calzado-3.html
@@ -54,6 +54,10 @@
             <div class="col-12 col-md-6 col-lg-6 px-5">
                 <h2 class="mt-5 text-center">Air Force 1</h2>
                 <hr>
+                <li>
+                    <h4>Color: Blanco / Negro / Rojo</h4>
+                </li>
+                
             </div>
         </div>
     </main>
