Agrego precio anterior y actual

--- a/pages/detalles-de-producto/calzados/calzado-3.html
+++ b/pages/detalles-de-producto/calzados/calzado-3.html
@@ -57,6 +57,8 @@
                 <li>
                     <h4>Color: Blanco / Negro / Rojo</h4>
                 </li>
+                <p style="margin: 0px;" class="text-decoration-line-through fs-5">$100.000</p>
+                <h3 class="Precio fw-bold fs-2">$80.000</h3>
                 
             </div>
         </div>
