Agrego descripcion y talles

--- a/pages/detalles-de-producto/calzados/calzado-3.html
+++ b/pages/detalles-de-producto/calzados/calzado-3.html
@@ -72,6 +72,22 @@
                 <button class="Botones container-fluid p-2 rounded bg-primary">
                     <h4>Agregar al Carrito</h4>
                 </button>
+                <div class="my-2">
+                    <details class="Interior p-3 rounded mb-2">
+                        <summary class="fs-5">DESCRIPCIÓN</summary>
+                        <p>Cómodas, duraderas y atemporales, estas zapatillas clásicas son veneradas por su calidad. Las
+                            Nike Air Force 1 para hombre presentan una construcción clásica de los 80 con cuero
+                            suave y detalles llamativos, lo que garantiza un estilo elegante dentro y fuera de la
+                            cancha.</p>
+                        <p><strong class="me-1">Material:</strong>Cuero</p>
+                        <p><strong class="me-1">Color:</strong>Blanca / Negra / Roja</p>
+                        <p>Talle (ARG): 41 / Talle (US): 9.5 / 10</p>
+                        <p>Talle (ARG): 42 / Talle (US): 10 / 10.5</p>
+                        <p>Talle (ARG): 43 / Talle (US): 11</p>
+                        <p>Talle (ARG): 44 / Talle (US): 12</p>
+                    </details>
+                </div>
+
             </div>
         </div>
     </main>
