--- a/pages/detalles-de-producto/calzados/calzado-4.html
+++ b/pages/detalles-de-producto/calzados/calzado-4.html
@@ -10,14 +10,49 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <meta name="description" content="En GLAM encontraras la mejor ropa deportiva: remeras, shorts, camperas, calzado. Moda, confort y rendimiento en un solo lugar">
+    <meta name="description"
+        content="En GLAM encontraras la mejor ropa deportiva: remeras, shorts, camperas, calzado. Moda, confort y rendimiento en un solo lugar">
     <meta name="keywords" content="Zapatillas, Busos, Camisetas, Short, Camperas, Moda, Confort, Elegancia">
     <meta name="author" content="Gonzalo Tabares, Leandro Blanca, Abel Ruiz, Mauro Seu">
 </head>
 
 <body>
 
-    <main></main>
+    <main>
+        <div class="row">
+            <div id="carouselExampleIndicators" class="carousel slide col-12 col-md-6 col-lg-6">
+                <div class="carousel-indicators col-8">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                        class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner col-6">
+                    <div class="carousel-item active">
+                        <img src="/assets/img/zapatillas/Zapatillas-Puma-1.png" alt="Puma Negra" class="col-12">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="/assets/img/zapatillas/Zapatillas-Puma-2.png" alt="Puma Roja" class="col-12">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="/assets/img/zapatillas/Zapatillas-Puma-3.png" alt="Puma Verde" class="col-12">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+    </main>
 
 </body>
 
