Agrego titulo del producto

--- a/pages/detalles-de-producto/calzados/calzado-4.html
+++ b/pages/detalles-de-producto/calzados/calzado-4.html
@@ -51,6 +51,10 @@
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
+            <div class="col-12 col-md-6 col-lg-6 px-5">
+                <h2 class="mt-5 text-center">Puma Park LifeStyle</h2>
+                <hr>
+            </div>
         </div>
     </main>
 
