Agrego material y colores disponibles

--- a/pages/detalles-de-producto/calzados/calzado-4.html
+++ b/pages/detalles-de-producto/calzados/calzado-4.html
@@ -54,6 +54,12 @@
             <div class="col-12 col-md-6 col-lg-6 px-5">
                 <h2 class="mt-5 text-center">Puma Park LifeStyle</h2>
                 <hr>
+                <li>
+                    <h4>Material: Gamuza</h4>
+                </li>
+                <li>
+                    <h4>Color: Negra / Rojo / Verde</h4>
+                </li>
             </div>
         </div>
     </main>
