--- a/pages/detalles-de-producto/calzados/calzado-4.html
+++ b/pages/detalles-de-producto/calzados/calzado-4.html
@@ -60,6 +60,8 @@
                 <li>
                     <h4>Color: Negra / Rojo / Verde</h4>
                 </li>
+                <p style="margin: 0px;" class="text-decoration-line-through fs-5">$100.000</p>
+                <h3 class="Precio fw-bold fs-2">$60.000</h3>
             </div>
         </div>
     </main>
