Agrego boton de comprar y agregar al carrito

--- a/pages/detalles-de-producto/calzados/calzado-4.html
+++ b/pages/detalles-de-producto/calzados/calzado-4.html
@@ -69,6 +69,10 @@
                     <div class="Talles border rounded text-center p-1" style="width: 40px;">43</div>
                     <div class="Talles border rounded text-center p-1" style="width: 40px;">44</div>
                 </div>
+                </button>
+                <button class="Botones container-fluid p-2 rounded bg-primary">
+                    <h4>Agregar al Carrito</h4>
+                </button>
             </div>
         </div>
     </main>
