--- a/pages/detalles-de-producto/calzados/calzado-4.html
+++ b/pages/detalles-de-producto/calzados/calzado-4.html
@@ -73,6 +73,18 @@
                 <button class="Botones container-fluid p-2 rounded bg-primary">
                     <h4>Agregar al Carrito</h4>
                 </button>
+                <div class="my-2">
+                    <details class="Interior p-3 rounded mb-2">
+                        <summary class="fs-5">DESCRIPCIÓN</summary>
+                        <p>Zapatillas PUMA Park Lifestyle OG: estilo skate con impronta urbana y sostenible</p>
+                        <p><strong class="me-1">Material:</strong>Gamuza</p>
+                        <p><strong class="me-1">Color:</strong>Negra / Rojo / Verde</p>
+                        <p>Talle (ARG): 41 / Talle (US): 9.5 / 10</p>
+                        <p>Talle (ARG): 42 / Talle (US): 10 / 10.5</p>
+                        <p>Talle (ARG): 43 / Talle (US): 11</p>
+                        <p>Talle (ARG): 44 / Talle (US): 12</p>
+                    </details>
+                </div>
             </div>
         </div>
     </main>
