--- a/pages/detalles-de-producto/calzados/calzado-4.html
+++ b/pages/detalles-de-producto/calzados/calzado-4.html
@@ -84,6 +84,11 @@
                         <p>Talle (ARG): 43 / Talle (US): 11</p>
                         <p>Talle (ARG): 44 / Talle (US): 12</p>
                     </details>
+                    <details class="Interior p-3 rounded">
+                        <summary class="fs-5">MEDIOS DE PAGO</summary>
+                        <p>3 cuotas sin interés de $20.000</p>
+                        <p>20% de descuento pagando con Efectivo o Transferencia</p>
+                    </details>
                 </div>
             </div>
         </div>
