--- a/pages/detalles-de-producto/calzados/calzado-4.html
+++ b/pages/detalles-de-producto/calzados/calzado-4.html
@@ -69,6 +69,8 @@
                     <div class="Talles border rounded text-center p-1" style="width: 40px;">43</div>
                     <div class="Talles border rounded text-center p-1" style="width: 40px;">44</div>
                 </div>
+                <button class="Botones container-fluid p-2 rounded bg-success my-2">
+                    <h4>Comprar</h4>
                 </button>
                 <button class="Botones container-fluid p-2 rounded bg-primary">
                     <h4>Agregar al Carrito</h4>
