Agrego titulo al producto

--- a/pages/detalles-de-producto/accesorios/accesorio-1.html
+++ b/pages/detalles-de-producto/accesorios/accesorio-1.html
@@ -28,7 +28,7 @@
                         aria-label="Slide 2"></button>
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
                         aria-label="Slide 3"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
                         aria-label="Slide 4"></button>
                 </div>
                 <div class="carousel-inner col-6">
@@ -55,6 +55,12 @@
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
+            </div>
+
+            <div class="col-12 col-md-6 col-lg-6 px-5">
+                <h2 class="mt-5 text-center">Anteojos Oculus</h2>
+                <hr>
+
             </div>
         </div>
     </main>
