--- a/pages/detalles-de-producto/accesorios/accesorio-1.html
+++ b/pages/detalles-de-producto/accesorios/accesorio-1.html
@@ -60,7 +60,12 @@
             <div class="col-12 col-md-6 col-lg-6 px-5">
                 <h2 class="mt-5 text-center">Anteojos Oculus</h2>
                 <hr>
-
+                <li>
+                    <h4>Material: Plastico</h4>
+                </li>
+                <li>
+                    <h4>Color: Gris / Celeste / Azul / Amarillo</h4>
+                </li>
             </div>
         </div>
     </main>
