Agrego precio antiguo y actual

--- a/pages/detalles-de-producto/accesorios/accesorio-1.html
+++ b/pages/detalles-de-producto/accesorios/accesorio-1.html
@@ -66,8 +66,11 @@
                 <li>
                     <h4>Color: Gris / Celeste / Azul / Amarillo</h4>
                 </li>
+                <p style="margin: 0px;" class="text-decoration-line-through fs-5">$60.000</p>
+                <h3 class="Precio fw-bold fs-2">$45.000</h3>
+                <div class="d-flex gap-2 mb-3">
+                </div>
             </div>
-        </div>
     </main>
 
 </body>
