Agrego boton de comprar y añadir al carrito

--- a/pages/detalles-de-producto/accesorios/accesorio-1.html
+++ b/pages/detalles-de-producto/accesorios/accesorio-1.html
@@ -68,8 +68,12 @@
                 </li>
                 <p style="margin: 0px;" class="text-decoration-line-through fs-5">$60.000</p>
                 <h3 class="Precio fw-bold fs-2">$45.000</h3>
-                <div class="d-flex gap-2 mb-3">
-                </div>
+                <button class="Botones container-fluid p-2 rounded bg-success my-2">
+                    <h4>Comprar</h4>
+                </button>
+                <button class="Botones container-fluid p-2 rounded bg-primary">
+                    <h4>Agregar al Carrito</h4>
+                </button>
             </div>
     </main>
 
