--- a/pages/detalles-de-producto/accesorios/accesorio-1.html
+++ b/pages/detalles-de-producto/accesorios/accesorio-1.html
@@ -74,6 +74,14 @@
                 <button class="Botones container-fluid p-2 rounded bg-primary">
                     <h4>Agregar al Carrito</h4>
                 </button>
+                <div class="my-2">
+                    <details class="Interior p-3 rounded mb-2">
+                        <summary class="fs-5">DESCRIPCIÓN</summary>
+                        <p>Anteojos de sol tendencia Y2K con filtro UV.</p>
+                        <p><strong class="me-1">Material:</strong>Plastico</p>
+                        <p><strong class="me-1">Color:</strong>Gris / Celeste / Azul / Amarillo</p>
+                    </details>
+                </div>
             </div>
     </main>
 
