Agrego formas de pago

--- a/pages/detalles-de-producto/accesorios/accesorio-1.html
+++ b/pages/detalles-de-producto/accesorios/accesorio-1.html
@@ -81,6 +81,11 @@
                         <p><strong class="me-1">Material:</strong>Plastico</p>
                         <p><strong class="me-1">Color:</strong>Gris / Celeste / Azul / Amarillo</p>
                     </details>
+                    <details class="Interior p-3 rounded">
+                        <summary class="fs-5">MEDIOS DE PAGO</summary>
+                        <p>3 cuotas sin interés de $15.000</p>
+                        <p>20% de descuento pagando con Efectivo o Transferencia</p>
+                    </details>
                 </div>
             </div>
     </main>
