Agrego imagen del error 404

--- a/pages/error404.html
+++ b/pages/error404.html
@@ -17,6 +17,12 @@
 
 <body>
 
+    <section class="error-404 text-center">
+      <img src="../assets/img/error_02.png" alt="Error 404" class="error-img">
+      <a href="index.html" class="btn btn-outline-dark btn-lg mt-4">⬅️ Volver al inicio</a>
+    </section>
+  
+
     <main>
 
 
