--- a/pages/error404.html
+++ b/pages/error404.html
@@ -9,6 +9,7 @@
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="../css/error_404.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <meta name="description" content="En GLAM encontraras la mejor ropa deportiva: remeras, shorts, camperas, calzado. Moda, confort y rendimiento en un solo lugar">
     <meta name="keywords" content="Zapatillas, Busos, Camisetas, Short, Camperas, Moda, Confort, Elegancia">
@@ -17,10 +18,11 @@
 
 <body>
 
-    <section class="error-404 text-center">
-      <img src="../assets/img/error_02.png" alt="Error 404" class="error-img">
-      <a href="index.html" class="btn btn-outline-dark btn-lg mt-4">⬅️ Volver al inicio</a>
+    <section class="bg-dark d-flex flex-column justify-content-center align-items-center py-5">
+        <img src="../assets/img/error_03.png" alt="Error 404" class="img-fluid mb-4" style="width: 100%;">
+        <a href="/index.html" class="btn btn-outline-light btn-lg">⬅️ Volver al inicio</a>
     </section>
+
   
 
     <main>
