--- a/index.html
+++ b/index.html
@@ -1,32 +1,92 @@
 <!DOCTYPE html>
 <html lang="es" data-bs-theme="dark">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Glam</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <meta name="description" content="En GLAM encontraras la mejor ropa deportiva: remeras, shorts, camperas, calzado. Moda, confort y rendimiento en un solo lugar">
-    <meta name="keywords" content="Zapatillas, Busos, Camisetas, Short, Camperas, Moda, Confort, Elegancia">
-    <meta name="author" content="Gonzalo Tabares, Leandro Blanca, Abel Ruiz, Mauro Seu">
-</head>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
+    />
+    <link rel="stylesheet" href="css/index.css" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <meta
+      name="description"
+      content="En GLAM encontraras la mejor ropa deportiva: remeras, shorts, camperas, calzado. Moda, confort y rendimiento en un solo lugar"
+    />
+    <meta
+      name="keywords"
+      content="Zapatillas, Busos, Camisetas, Short, Camperas, Moda, Confort, Elegancia"
+    />
+    <meta
+      name="author"
+      content="Gonzalo Tabares, Leandro Blanca, Abel Ruiz, Mauro Seu"
+    />
+  </head>
 
-<body>
-
+  <body>
     <main>
-
-
-        
+      <section class="container-fluid py-4 pb-5 my-5">
+        <h2>Lo favorito de nuentras marcas <i class="bi bi-fire"></i></h2>
+        <div class="row">
+          <div class="col-12 col-md-6 col-lg-6">
+            <a href="">
+              <div class="cardPrincipal border-0 shadow-sm">
+                <img
+                  src="assets/img/nikePortada2.jpg"
+                  class="img-fluid rounded-3 cardOverlay"
+                  alt="la liga"
+                />
+              </div>
+            </a>
+          </div>
+          <div class="col-12 col-md-6 col-lg-6">
+            <a href="">
+              <div class="cardPrincipal border-0 shadow-sm">
+                <img
+                  src="assets/img/adidasPortada.jpg"
+                  class="img-fluid rounded-3 cardOverlay"
+                  alt="la liga"
+                />
+              </div>
+            </a>
+          </div>
+          <div class="col-12 col-md-6 col-lg-6">
+            <a href="">
+              <div class="cardPrincipal border-0 shadow-sm">
+                <img
+                  src="assets/img/NewPortada.jpg"
+                  class="img-fluid rounded-3 cardOverlay"
+                  alt="la liga"
+                />
+              </div>
+            </a>
+          </div>
+          <div class="col-12 col-md-6 col-lg-6">
+            <a href="">
+              <div class="cardPrincipal border-0 shadow-sm hoverPrincipal">
+                <img
+                  src="assets/img/pumaPortada.jpeg"
+                  class="img-fluid rounded-3 cardOverlay"
+                  alt="la liga"
+                />
+              </div>
+            </a>
+          </div>
+        </div>
+      </section>
     </main>
+  </body>
 
-</body>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-    crossorigin="anonymous"></script>
-
+    crossorigin="anonymous"
+  ></script>
 </html>
