agregue una portada a la pagina index

--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
 <body>
 
     <main>
-
+       <section>
+        <img src="assets/img/logosMarcas.jpg"
+         alt="Logo Marcas"
+         style="width: 100%; object-fit: cover;"
+         class="img-fluid "
+         >
+       </section>
 
         
     </main>
