--- a/pages/detalles-de-producto/accesorios/accesorio-2.html
+++ b/pages/detalles-de-producto/accesorios/accesorio-2.html
@@ -54,6 +54,11 @@
             <div class="col-12 col-md-6 col-lg-6 px-5">
                 <h2 class="mt-5 text-center">Reloj Rolex</h2>
                 <hr>
+                <li>
+                    <h4>Color: Gris / Negro</h4>
+                </li>
+                <p style="margin: 0px;" class="text-decoration-line-through fs-5">$375.000</p>
+                <h3 class="Precio fw-bold fs-2">$280.000</h3>
             </div>
         </div>
 
