--- a/pages/detalles-de-producto/accesorios/accesorio-2.html
+++ b/pages/detalles-de-producto/accesorios/accesorio-2.html
@@ -59,6 +59,12 @@
                 </li>
                 <p style="margin: 0px;" class="text-decoration-line-through fs-5">$375.000</p>
                 <h3 class="Precio fw-bold fs-2">$280.000</h3>
+                <button class="Botones container-fluid p-2 rounded bg-success my-2">
+                    <h4>Comprar</h4>
+                </button>
+                <button class="Botones container-fluid p-2 rounded bg-primary">
+                    <h4>Agregar al Carrito</h4>
+                </button>
             </div>
         </div>
 
