--- a/pages/detalles-de-producto/accesorios/accesorio-2.html
+++ b/pages/detalles-de-producto/accesorios/accesorio-2.html
@@ -65,6 +65,15 @@
                 <button class="Botones container-fluid p-2 rounded bg-primary">
                     <h4>Agregar al Carrito</h4>
                 </button>
+                <div class="my-2">
+                    <details class="Interior p-3 rounded mb-2">
+                        <summary class="fs-5">DESCRIPCIÓN</summary>
+                        <p>Este reloj, el punto culminante de más de siete años de desarrollo, ha dado lugar a 32
+                            solicitudes de patentes, 18 de ellas exclusivas del modelo.</p>
+                        <p><strong class="me-1">Material:</strong>Metal</p>
+                        <p><strong class="me-1">Color:</strong> Gris / Negro</p>
+                    </details>
+                </div>
             </div>
         </div>
 
