--- a/pages/detalles-de-producto/accesorios/accesorio-2.html
+++ b/pages/detalles-de-producto/accesorios/accesorio-2.html
@@ -73,6 +73,11 @@
                         <p><strong class="me-1">Material:</strong>Metal</p>
                         <p><strong class="me-1">Color:</strong> Gris / Negro</p>
                     </details>
+                    <details class="Interior p-3 rounded">
+                        <summary class="fs-5">MEDIOS DE PAGO</summary>
+                        <p>3 cuotas sin interés de $93.400</p>
+                        <p>20% de descuento pagando con Efectivo o Transferencia</p>
+                    </details>
                 </div>
             </div>
         </div>
