--- a/pages/detalles-de-producto/accesorios/accesorio-3.html
+++ b/pages/detalles-de-producto/accesorios/accesorio-3.html
@@ -53,6 +53,11 @@
             <div class="col-12 col-md-6 col-lg-6 px-5">
                 <h2 class="mt-5 text-center">Riñonera Nike</h2>
                 <hr>
+                <li>
+                    <h4>Color: Blanco / Gris / Negro</h4>
+                </li>
+                <p style="margin: 0px;" class="text-decoration-line-through fs-5">$30.000</p>
+                <h3 class="Precio fw-bold fs-2">$12.000</h3>
             </div>
         </div>
     </main>
