Agrego descripcion del producto

--- a/pages/detalles-de-producto/accesorios/accesorio-3.html
+++ b/pages/detalles-de-producto/accesorios/accesorio-3.html
@@ -65,6 +65,16 @@
                 <button class="Botones container-fluid p-2 rounded bg-primary">
                     <h4>Agregar al Carrito</h4>
                 </button>
+                <div class="my-2">
+                    <details class="Interior p-3 rounded mb-2">
+                        <summary class="fs-5">DESCRIPCIÓN</summary>
+                        <p>La cangurera Nike Heritage te permite guardar los artículos pequeños que no caben en tus
+                            bolsillos. El bolsillo oculto interior con cierre permite tener las cosas organizadas y a la
+                            mano.</p>
+                        <p><strong class="me-1">Material:</strong> Tela de poliéster</p>
+                        <p><strong class="me-1">Color:</strong> Blanco / Gris / Negro</p>
+                    </details>
+                </div>
             </div>
         </div>
     </main>
