Agrego formas de pago

--- a/pages/detalles-de-producto/accesorios/accesorio-3.html
+++ b/pages/detalles-de-producto/accesorios/accesorio-3.html
@@ -74,6 +74,11 @@
                         <p><strong class="me-1">Material:</strong> Tela de poliéster</p>
                         <p><strong class="me-1">Color:</strong> Blanco / Gris / Negro</p>
                     </details>
+                    <details class="Interior p-3 rounded">
+                        <summary class="fs-5">MEDIOS DE PAGO</summary>
+                        <p>3 cuotas sin interés de $4.000</p>
+                        <p>20% de descuento pagando con Efectivo o Transferencia</p>
+                    </details>
                 </div>
             </div>
         </div>
