Agrego descripcion del producto

--- a/pages/detalles-de-producto/accesorios/accesorio-4.html
+++ b/pages/detalles-de-producto/accesorios/accesorio-4.html
@@ -60,6 +60,13 @@
                 <button class="Botones container-fluid p-2 rounded bg-primary">
                     <h4>Agregar al Carrito</h4>
                 </button>
+                <details class="Interior p-3 rounded mb-2">
+                    <summary class="fs-5">DESCRIPCIÓN</summary>
+                    <p>Ideal tanto para principiantes como para jugadores ocasionales, la Pro Staff Precision XL 110
+                        ofrece un rendimiento excepcional a un precio increíble.</p>
+                    <p><strong class="me-1">Material:</strong> Aleación de Aluminio</p>
+                    <p><strong class="me-1">Color:</strong>Rojo / Azul</p>
+                </details>
             </div>
         </div>
     </main>
