Agrego formas de pago

--- a/pages/detalles-de-producto/accesorios/accesorio-4.html
+++ b/pages/detalles-de-producto/accesorios/accesorio-4.html
@@ -67,6 +67,11 @@
                     <p><strong class="me-1">Material:</strong> Aleación de Aluminio</p>
                     <p><strong class="me-1">Color:</strong>Rojo / Azul</p>
                 </details>
+                <details class="Interior p-3 rounded">
+                        <summary class="fs-5">MEDIOS DE PAGO</summary>
+                        <p>3 cuotas sin interés de $27.999</p>
+                        <p>20% de descuento pagando con Efectivo o Transferencia</p>
+                    </details>
             </div>
         </div>
     </main>
