--- a/pages/detalles-de-producto/camperas/campera-1.html
+++ b/pages/detalles-de-producto/camperas/campera-1.html
@@ -55,6 +55,10 @@
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
+            <div class="col-12 col-md-6 col-lg-6 px-5">
+                <h2 class="mt-5 text-center">Canguro Estilo Y2K</h2>
+                <hr>
+            </div>
         </div>
     </main>
 
