Agrego colores y precios

--- a/pages/detalles-de-producto/camperas/campera-1.html
+++ b/pages/detalles-de-producto/camperas/campera-1.html
@@ -58,6 +58,11 @@
             <div class="col-12 col-md-6 col-lg-6 px-5">
                 <h2 class="mt-5 text-center">Canguro Estilo Y2K</h2>
                 <hr>
+                <li>
+                    <h4>Color: Negro / Gris / Marron</h4>
+                </li>
+                <p style="margin: 0px;" class="text-decoration-line-through fs-5">$120.000</p>
+                <h3 class="Precio fw-bold fs-2">$69.999</h3>
             </div>
         </div>
     </main>
