--- a/pages/detalles-de-producto/camperas/campera-1.html
+++ b/pages/detalles-de-producto/camperas/campera-1.html
@@ -63,6 +63,11 @@
                 </li>
                 <p style="margin: 0px;" class="text-decoration-line-through fs-5">$120.000</p>
                 <h3 class="Precio fw-bold fs-2">$69.999</h3>
+                <button class="Botones container-fluid p-2 rounded bg-success my-2">
+                    <h4>Comprar</h4>
+                </button>
+                <button class="Botones container-fluid p-2 rounded bg-primary">
+                <h4>Agregar al Carrito</h4>
             </div>
         </div>
     </main>
