--- a/pages/detalles-de-producto/camperas/campera-1.html
+++ b/pages/detalles-de-producto/camperas/campera-1.html
@@ -63,6 +63,13 @@
                 </li>
                 <p style="margin: 0px;" class="text-decoration-line-through fs-5">$120.000</p>
                 <h3 class="Precio fw-bold fs-2">$69.999</h3>
+                <div class="d-flex gap-2 mb-3">
+                    <h4><strong>Talles:</strong></h4>
+                    <div class="Talles border rounded text-center p-1" style="width: 40px;">1</div>
+                    <div class="Talles border rounded text-center p-1" style="width: 40px;">2</div>
+                    <div class="Talles border rounded text-center p-1" style="width: 40px;">3</div>
+                    <div class="Talles border rounded text-center p-1" style="width: 40px;">4</div>
+                </div>
                 <button class="Botones container-fluid p-2 rounded bg-success my-2">
                     <h4>Comprar</h4>
                 </button>
