--- a/pages/detalles-de-producto/camperas/campera-1.html
+++ b/pages/detalles-de-producto/camperas/campera-1.html
@@ -86,6 +86,11 @@
                         <p>Talle 3: ancho 76 cm, largo 68 cm</p>
                         <P>Talle 4: ancho 78 cm, largo 70 cm</P>
                     </details>
+                    <details class="Interior p-3 rounded">
+                        <summary class="fs-5">MEDIOS DE PAGO</summary>
+                        <p>3 cuotas sin interés de $23.333</p>
+                        <p>20% de descuento pagando con Efectivo o Transferencia</p>
+                    </details>
             </div>
         </div>
     </main>
