--- a/pages/detalles-de-producto/camperas/campera-2.html
+++ b/pages/detalles-de-producto/camperas/campera-2.html
@@ -51,6 +51,13 @@
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
+            <div class="col-12 col-md-6 col-lg-6 px-5">
+                <h2 class="mt-5 text-center">Campera Nike</h2>
+                <hr>
+                <li>
+                    <h4>Color: Negro / Verde / Gris</h4>
+                </li>
+            </div>
         </div>
     </main>
 
