--- a/pages/detalles-de-producto/camperas/campera-2.html
+++ b/pages/detalles-de-producto/camperas/campera-2.html
@@ -57,6 +57,13 @@
                 <li>
                     <h4>Color: Negro / Verde / Gris</h4>
                 </li>
+                <div class="d-flex gap-2 mb-3">
+                    <h4><strong>Talles:</strong></h4>
+                    <div class="Talles border rounded text-center p-1" style="width: 40px;">1</div>
+                    <div class="Talles border rounded text-center p-1" style="width: 40px;">2</div>
+                    <div class="Talles border rounded text-center p-1" style="width: 40px;">3</div>
+                    <div class="Talles border rounded text-center p-1" style="width: 40px;">4</div>
+                </div>
             </div>
         </div>
     </main>
