Agrego precio anterior y actual

--- a/pages/detalles-de-producto/camperas/campera-2.html
+++ b/pages/detalles-de-producto/camperas/campera-2.html
@@ -57,6 +57,8 @@
                 <li>
                     <h4>Color: Negro / Verde / Gris</h4>
                 </li>
+                <p style="margin: 0px;" class="text-decoration-line-through fs-5">$63.400</p>
+                <h3 class="Precio fw-bold fs-2">$49.999</h3>
                 <div class="d-flex gap-2 mb-3">
                     <h4><strong>Talles:</strong></h4>
                     <div class="Talles border rounded text-center p-1" style="width: 40px;">1</div>
