Agrego botones de comprar y agregar al carrito

--- a/pages/detalles-de-producto/camperas/campera-2.html
+++ b/pages/detalles-de-producto/camperas/campera-2.html
@@ -66,6 +66,12 @@
                     <div class="Talles border rounded text-center p-1" style="width: 40px;">3</div>
                     <div class="Talles border rounded text-center p-1" style="width: 40px;">4</div>
                 </div>
+                <button class="Botones container-fluid p-2 rounded bg-success my-2">
+                    <h4>Comprar</h4>
+                </button>
+                <button class="Botones container-fluid p-2 rounded bg-primary">
+                    <h4>Agregar al Carrito</h4>
+                </button>
             </div>
         </div>
     </main>
