--- a/pages/detalles-de-producto/camperas/campera-2.html
+++ b/pages/detalles-de-producto/camperas/campera-2.html
@@ -72,6 +72,19 @@
                 <button class="Botones container-fluid p-2 rounded bg-primary">
                     <h4>Agregar al Carrito</h4>
                 </button>
+                <div class="my-2">
+                    <details class="Interior p-3 rounded mb-2">
+                        <summary class="fs-5">DESCRIPCIÓN</summary>
+                        <p>Ligera y transpirable, esta campera está lista para convertirse en una prenda básica de tu
+                            armario tanto dentro como fuera de la cancha. </p>
+                        <p><strong class="me-1">Material:</strong> Tela de Avion</p>
+                        <p><strong class="me-1">Color:</strong>Negra / Verde / Gris</p>
+                        <p>Talle 1: ancho 72 cm, largo 64 cm</p>
+                        <p>Talle 2: ancho 74 cm, largo 66 cm</p>
+                        <p>Talle 3: ancho 76 cm, largo 68 cm</p>
+                        <P>Talle 4: ancho 78 cm, largo 70 cm</P>
+                    </details>
+                </div>
             </div>
         </div>
     </main>
