--- a/pages/detalles-de-producto/camperas/campera-3.html
+++ b/pages/detalles-de-producto/camperas/campera-3.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <meta name="description" content="En GLAM encontraras la mejor ropa deportiva: remeras, shorts, camperas, calzado. Moda, confort y rendimiento en un solo lugar">
+    <meta name="description"
+        content="En GLAM encontraras la mejor ropa deportiva: remeras, shorts, camperas, calzado. Moda, confort y rendimiento en un solo lugar">
     <meta name="keywords" content="Zapatillas, Busos, Camisetas, Short, Camperas, Moda, Confort, Elegancia">
     <meta name="author" content="Gonzalo Tabares, Leandro Blanca, Abel Ruiz, Mauro Seu">
 </head>
@@ -32,16 +33,20 @@
                 </div>
                 <div class="carousel-inner col-6">
                     <div class="carousel-item active">
-                        <img src="/assets/img/camperas/Campera-North-Face-1.png" alt="Campera North Face Negra" class="col-12">
+                        <img src="/assets/img/camperas/Campera-North-Face-1.png" alt="Campera North Face Negra"
+                            class="col-12">
                     </div>
                     <div class="carousel-item">
-                        <img src="/assets/img/camperas/Campera-North-Face-2.png" alt="Campera North Face Azul" class="col-12">
+                        <img src="/assets/img/camperas/Campera-North-Face-2.png" alt="Campera North Face Azul"
+                            class="col-12">
                     </div>
                     <div class="carousel-item">
-                        <img src="/assets/img/camperas/Campera-North-Face-3.png" alt="Campera North Face Violeta" class="col-12">
+                        <img src="/assets/img/camperas/Campera-North-Face-3.png" alt="Campera North Face Violeta"
+                            class="col-12">
                     </div>
                     <div class="carousel-item">
-                        <img src="/assets/img/camperas/Campera-North-Face-4.png" alt="Campera North Face Blanca" class="col-12">
+                        <img src="/assets/img/camperas/Campera-North-Face-4.png" alt="Campera North Face Blanca"
+                            class="col-12">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -54,6 +59,13 @@
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
+            </div>
+            <div class="col-12 col-md-6 col-lg-6 px-5">
+                <h2 class="mt-5 text-center">Campera North Face</h2>
+                <hr>
+                <li>
+                    <h4>Color: Negra / Azul / Violeta / Blanca</h4>
+                </li>
             </div>
         </div>
     </main>
