Agrego precio anterior y actual

--- a/pages/detalles-de-producto/camperas/campera-3.html
+++ b/pages/detalles-de-producto/camperas/campera-3.html
@@ -66,6 +66,8 @@
                 <li>
                     <h4>Color: Negra / Azul / Violeta / Blanca</h4>
                 </li>
+                <p style="margin: 0px;" class="text-decoration-line-through fs-5">$154.999</p>
+                <h3 class="Precio fw-bold fs-2">$86.999</h3>
             </div>
         </div>
     </main>
