Agrego descripcion del producto

--- a/pages/detalles-de-producto/camperas/campera-3.html
+++ b/pages/detalles-de-producto/camperas/campera-3.html
@@ -81,6 +81,19 @@
                 <button class="Botones container-fluid p-2 rounded bg-primary">
                     <h4>Agregar al Carrito</h4>
                 </button>
+                <div class="my-2">
+                    <details class="Interior p-3 rounded mb-2">
+                        <summary class="fs-5">DESCRIPCIÓN</summary>
+                        <p>la chaqueta de invierno no solo está hecha con tela reciclada, sino que también tiene una
+                            calificación impermeable de 393.701</p>
+                        <p><strong class="me-1">Material:</strong> Pluma</p>
+                        <p><strong class="me-1">Color:</strong> Negra / Azul / Violeta / Blanca</p>
+                        <p>Talle 1: ancho 72 cm, largo 64 cm</p>
+                        <p>Talle 2: ancho 74 cm, largo 66 cm</p>
+                        <p>Talle 3: ancho 76 cm, largo 68 cm</p>
+                        <P>Talle 4: ancho 78 cm, largo 70 cm</P>
+                    </details>
+                </div>
             </div>
         </div>
     </main>
