--- a/pages/detalles-de-producto/camperas/campera-4.html
+++ b/pages/detalles-de-producto/camperas/campera-4.html
@@ -17,7 +17,42 @@
 
 <body>
 
-    <main></main>
+    <main>
+        <div class="row">
+            <div id="carouselExampleIndicators" class="carousel slide col-12 col-md-6 col-lg-6">
+                <div class="carousel-indicators col-8">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                        class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner col-6">
+                    <div class="carousel-item active">
+                        <img src="/assets/img/camperas/Campera-Retro-1.png" alt="Campera Retro Violeta " class="col-12">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="/assets/img/camperas/Campera-Retro-2.png" alt="Campera Retro Roja" class="col-12">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="/assets/img/camperas/Campera-Retro-3.png" alt="Campera Retro Gris" class="col-12">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+            
+        </div>
+    </main>
 
 </body>
 
