Agrego titulo y colores

--- a/pages/detalles-de-producto/camperas/campera-4.html
+++ b/pages/detalles-de-producto/camperas/campera-4.html
@@ -50,7 +50,13 @@
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
-            
+            <div class="col-12 col-md-6 col-lg-6 px-5">
+                <h2 class="mt-5 text-center">Camperas Retros</h2>
+                <hr>
+                <li>
+                    <h4>Color: Violeta / Rojo / Gris</h4>
+                </li>    
+            </div>
         </div>
     </main>
 
