Agrego precio anterior y actualizado

--- a/pages/detalles-de-producto/camperas/campera-4.html
+++ b/pages/detalles-de-producto/camperas/campera-4.html
@@ -55,7 +55,9 @@
                 <hr>
                 <li>
                     <h4>Color: Violeta / Rojo / Gris</h4>
-                </li>    
+                </li>   
+                <p style="margin: 0px;" class="text-decoration-line-through fs-5">$92.600</p>
+                <h3 class="Precio fw-bold fs-2">$68.999</h3> 
             </div>
         </div>
     </main>
