--- a/pages/detalles-de-producto/camperas/campera-4.html
+++ b/pages/detalles-de-producto/camperas/campera-4.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <meta name="description" content="En GLAM encontraras la mejor ropa deportiva: remeras, shorts, camperas, calzado. Moda, confort y rendimiento en un solo lugar">
+    <meta name="description"
+        content="En GLAM encontraras la mejor ropa deportiva: remeras, shorts, camperas, calzado. Moda, confort y rendimiento en un solo lugar">
     <meta name="keywords" content="Zapatillas, Busos, Camisetas, Short, Camperas, Moda, Confort, Elegancia">
     <meta name="author" content="Gonzalo Tabares, Leandro Blanca, Abel Ruiz, Mauro Seu">
 </head>
@@ -55,9 +56,9 @@
                 <hr>
                 <li>
                     <h4>Color: Violeta / Rojo / Gris</h4>
-                </li>   
+                </li>
                 <p style="margin: 0px;" class="text-decoration-line-through fs-5">$92.600</p>
-                <h3 class="Precio fw-bold fs-2">$68.999</h3> 
+                <h3 class="Precio fw-bold fs-2">$68.999</h3>
                 <div class="d-flex gap-2 mb-3">
                     <h4><strong>Talles:</strong></h4>
                     <div class="Talles border rounded text-center p-1" style="width: 40px;">1</div>
@@ -71,6 +72,20 @@
                 <button class="Botones container-fluid p-2 rounded bg-primary">
                     <h4>Agregar al Carrito</h4>
                 </button>
+                <div class="my-2">
+                    <details class="Interior p-3 rounded mb-2">
+                        <summary class="fs-5">DESCRIPCIÓN</summary>
+                        <p>Campera colorblock hombro caído con recortes a contratono en frente, espalda y mangas.
+                            Elástico en cintura y puños. Bolsillos laterales que salen desde recortes. Forrería interna.
+                        </p>
+                        <p><strong class="me-1">Material:</strong> Tela de Avion</p>
+                        <p><strong class="me-1">Color:</strong> Violeta / Rojo / Gris</p>
+                        <p>Talle 1: ancho 72 cm, largo 64 cm</p>
+                        <p>Talle 2: ancho 74 cm, largo 66 cm</p>
+                        <p>Talle 3: ancho 76 cm, largo 68 cm</p>
+                        <P>Talle 4: ancho 78 cm, largo 70 cm</P>
+                    </details>
+                </div>
             </div>
         </div>
     </main>
