--- a/pages/detalles-de-producto/remeras/remera-1.html
+++ b/pages/detalles-de-producto/remeras/remera-1.html
@@ -59,6 +59,8 @@
                 <li>
                     <h4>Color: Celeste / Azul-Marino / Azul</h4>
                 </li>
+                <p style="margin: 0px;" class="text-decoration-line-through fs-5">$120.000</p>
+                <h3 class="Precio fw-bold fs-2">$74.200</h3>
             </div>
         </div>
     </main>
