Agrego precio anterior y actualizado

--- a/pages/detalles-de-producto/remeras/remera-2.html
+++ b/pages/detalles-de-producto/remeras/remera-2.html
@@ -59,6 +59,8 @@
                 <li>
                     <h4>Color: Negro</h4>
                 </li>
+                <p style="margin: 0px;" class="text-decoration-line-through fs-5">$26.400</p>
+                <h3 class="Precio fw-bold fs-2">$15.000</h3>
             </div>
         </div>
     </main>
